solve dropdown z-index problem and remove certain options

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@
   background-color: rgb(123, 158, 255);
   transition: .3s;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 2;
 }
 .task:hover {
   box-shadow: 0 0 20px rgb(0, 0, 0, .3);
